--- a/productivity/manifest.json
+++ b/productivity/manifest.json
@@ -2,23 +2,23 @@
     "name": "Developer for Life",
     "short_name": "dev4life",
     "icons": [{
-        "src": "./appicons/favicon-128.png",
+        "src": "/timemanagement/productivity/appicons/favicon-128.png",
         "sizes": "128x128",
         "type": "image/png"
     }, {
-        "src": "./appicons/apple-touch-icon-144x144.png",
+        "src": "/timemanagement/productivity/appicons/apple-touch-icon-144x144.png",
         "sizes": "144x144",
         "type": "image/png"
     }, {
-        "src": "./appicons/apple-touch-icon-152x152.png",
+        "src": "/timemanagement/productivity/appicons/apple-touch-icon-152x152.png",
         "sizes": "152x152",
         "type": "image/png"
     }, {
-        "src": "./appicons/favicon-196x196.png",
+        "src": "/timemanagement/productivity/appicons/favicon-196x196.png",
         "sizes": "196x196",
         "type": "image/png"
     }, {
-        "src": "./appicons/splash.png",
+        "src": "/timemanagement/productivity/appicons/splash.png",
         "sizes": "512x512",
         "type": "image/png"
     }],
